兄弟们，我认为我们组急需一个美工

--- a/weatherReport/mainwindow.ui
+++ b/weatherReport/mainwindow.ui
@@ -59,16 +59,6 @@
      <string>查询天气</string>
     </property>
    </widget>
-   <widget class="QWidget" name="weatherPic" native="true">
-    <property name="geometry">
-     <rect>
-      <x>510</x>
-      <y>90</y>
-      <width>181</width>
-      <height>111</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
@@ -105,6 +95,19 @@
      </widget>
     </widget>
    </widget>
+   <widget class="QLabel" name="weatherPic">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>80</y>
+      <width>151</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -120,7 +123,4 @@
  </widget>
  <resources/>
  <connections/>
- <buttongroups>
-  <buttongroup name="buttonGroup"/>
- </buttongroups>
 </ui>
